--- a/sass/style.scss
+++ b/sass/style.scss
@@ -123,6 +123,9 @@ body{
         height: 100px;
         background-color: rgb(100, 100, 100);
         border: 2px solid rgb(145, 145, 145);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     
     }
 }
