--- a/sass/style.scss
+++ b/sass/style.scss
@@ -126,6 +126,10 @@ body{
         display: flex;
         justify-content: center;
         align-items: center;
+        img{
+            width: 90px;
+            margin: 0;
+        }
     
     }
 }
