--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: mcFont;
+  src: url(../mcR.otf);
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,30 +9,32 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: mcFont;
   font-size: 62.5%;
   background-color: #333;
   width: 100vw;
-  height: 100vh;
   scroll-behavior: smooth;
   overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #373737;
+  flex-direction: column;
 }
 
 .app-box {
   padding: 2rem;
-  border: 2px solid black;
-  max-width: 1300px;
+  border: 4px solid black;
+  max-width: 1400px;
   width: 100%;
+  background-color: #c6c6c6;
+  box-shadow: 0 0 0 4px white inset;
+  margin-bottom: 2rem;
 }
 .app-box__title {
   margin-bottom: 1rem;
   text-align: center;
   font-size: 1.2rem;
-  font-weight: 600;
   text-transform: uppercase;
 }
 .app-box__card {
@@ -38,15 +44,13 @@ body {
   align-items: center;
 }
 .app-box__card--all {
-  background-color: rgba(0, 0, 0, 0.3);
-  border: 2px solid black;
   max-width: 400px;
   height: 500px;
   width: 100%;
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 2rem;
   align-items: center;
 }
 .app-box__card--all h2 {
@@ -55,26 +59,40 @@ body {
   font-size: 1.4rem;
 }
 .app-box__card--all .search-place {
-  margin-bottom: 1rem;
+  height: 150px;
 }
 .app-box__card--all .search-place input {
+  font-size: 1rem;
+  font-family: mcFont;
   padding: 0.5rem;
-  background: none;
   outline: none;
-  border: 1px solid white;
-  margin-right: 2rem;
+  margin-right: 1rem;
   color: white;
+  background-color: #8b8b8b;
+  border: 2px solid black;
+  border-left: 4px solid #373737;
+  border-top: 4px solid #373737;
+  border-bottom: 4px solid white;
+  border-right: 4px solid white;
 }
 .app-box__card--all .search-place button {
-  padding: 0.4rem;
-  background-color: white;
+  font-family: mcFont;
+  box-shadow: 2px 2px 0 1px inset, -2px -2px 0 1px #555555 inset;
+  padding: 0.5rem 1rem;
+  color: white;
+  background-color: #8b8b8b;
+  border: 4px solid black;
   font-size: 1rem;
-  border: none;
   cursor: pointer;
   transition: 0.3s;
 }
 .app-box__card--all .search-place button:active {
   background-color: rgb(185, 185, 185);
+}
+.app-box__card--all .search-place .error {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  text-align: center;
 }
 .app-box__card--all .show-place {
   display: flex;
@@ -84,15 +102,26 @@ body {
   justify-content: center;
   padding: 2rem;
 }
-.app-box__card--all .show-place p {
+.app-box__card--all .show-place .card-text-all {
+  margin-top: 1rem;
   text-align: center;
   text-transform: uppercase;
   font-size: 1.6rem;
-  font-weight: 600;
 }
-.app-box__card--all .show-place img {
-  margin-bottom: 1rem;
+.app-box__card--all .show-place .card-description {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  text-align: center;
+}
+.app-box__card--all .show-place .img {
   width: 100px;
+  height: 100px;
+  background-color: #8b8b8b;
+  border: 2px solid black;
+  border-left: 4px solid #373737;
+  border-top: 4px solid #373737;
+  border-bottom: 4px solid white;
+  border-right: 4px solid white;
 }
 
 .app-box__card--one .show-place {
@@ -104,7 +133,7 @@ body {
 }
 
 .crafting {
-  width: 302px;
+  width: 303px;
   height: 302px;
   display: flex;
   flex-direction: row;
@@ -112,10 +141,14 @@ body {
   border: 1px solid rgb(145, 145, 145);
 }
 .crafting .field {
+  background-color: #8b8b8b;
+  border: 2px solid black;
+  border-left: 4px solid #373737;
+  border-top: 4px solid #373737;
+  border-bottom: 4px solid white;
+  border-right: 4px solid white;
   width: 100px;
   height: 100px;
-  background-color: rgb(100, 100, 100);
-  border: 2px solid rgb(145, 145, 145);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,4 +156,44 @@ body {
 .crafting .field img {
   width: 90px;
   margin: 0;
+}
+
+.item-list {
+  padding: 2rem;
+  border: 4px solid black;
+  max-width: 1400px;
+  width: 100%;
+  background-color: #c6c6c6;
+  box-shadow: 0 0 0 4px white inset;
+}
+.item-list .item-list-title {
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 1.2rem;
+}
+.item-list .item-list-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+.item-list .item-list-field p {
+  margin-top: 1rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  width: 100px;
+  height: 100px;
+}
+.item-list .item-list-field img {
+  background-color: #8b8b8b;
+  border: 2px solid black;
+  border-left: 4px solid #373737;
+  border-top: 4px solid #373737;
+  border-bottom: 4px solid white;
+  border-right: 4px solid white;
+  width: 100px;
+  height: 100px;
 }/*# sourceMappingURL=style.css.map */
