--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,135 +1,234 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+@font-face {
+	font-family: mcFont;
+	src: url(../mcR.otf);
 }
-body{
-    font-family: "Montserrat", sans-serif;
-    font-size: 62.5%;
-    background-color: #333;
-    width: 100vw;
-    height: 100vh;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-.app-box{
-    padding: 2rem;
-    border: 2px solid black;
-    
-    max-width: 1300px;
-    width: 100%;
+body {
+	font-family: mcFont;
+	font-size: 62.5%;
+	background-color: #333;
+	width: 100vw;
+	scroll-behavior: smooth;
+	overflow-x: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #373737;
+	flex-direction: column;
+}
+.app-box {
+	padding: 2rem;
+	border: 4px solid black;
+	max-width: 1400px;
+	width: 100%;
+	background-color: #c6c6c6;
+	box-shadow: 0 0 0 4px white inset;
 
-    &__title{
-        margin-bottom: 1rem;
-        text-align: center;
-        font-size: 1.2rem;
-        font-weight: 600;
-        text-transform: uppercase;
-    }
-    &__card{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        &--all{
-            background-color: rgba(0, 0, 0, 0.3);
-            border: 2px solid black;
-            max-width: 400px;
-            
-            height: 500px;
-            width: 100%;
-            padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            h2{
-                
-                text-align: center;
-                margin-bottom: 1rem;
-                font-size: 1.4rem;
-            }
+	&__title {
+		margin-bottom: 1rem;
+		text-align: center;
+		font-size: 1.2rem;
+		
+		text-transform: uppercase;
+	}
+	&__card {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		&--all {
+			// background-color: #8b8b8b;
+			//border: 2px solid black;
+			// border-left: 4px solid #373737;
+			// border-top: 4px solid #373737;
+			// border-bottom: 4px solid white;
+			// border-right: 4px solid white;
+			max-width: 400px;
 
-            .search-place{
-                
-                margin-bottom: 1rem;
-                input{
-                    padding: 0.5rem;
-                    background:none;
-                    outline: none;
-                    border: 1px solid white;
-                    margin-right: 2rem;
-                    color: white;
-                }
-                button{
-                    padding: 0.4rem;
-                    background-color: white;
-                    font-size: 1rem;
-                    border: none;
-                    cursor: pointer;
-                    transition: 0.3s ;
-                }
-                button:active{
-                    background-color: rgb(185, 185, 185);
-                }
-            }
-            .show-place{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                justify-content: center;
-                padding: 2rem;
-                p{
-                    text-align: center;
-                    text-transform: uppercase;
-                    font-size: 1.6rem;
-                    font-weight: 600;
-                }
-                img{
-                    margin-bottom: 1rem ;
-                    width: 100px;
-                    
-                }
-            }
-        }
-    }
-}
-.app-box__card--one{
-    .show-place{
-        margin-bottom: 70px;
-    }
+			height: 500px;
+			width: 100%;
+			padding: 1rem;
+			display: flex;
+			flex-direction: column;
+			gap: 2rem;
+			align-items: center;
+			h2 {
+				text-align: center;
+				margin-bottom: 1rem;
+				font-size: 1.4rem;
+			}
+
+			.search-place {
+				height: 150px;
+				input {
+					font-size: 1rem;
+					//letter-spacing: 1px;
+					font-family: mcFont;
+					padding: 0.5rem;
+					//background: none;
+					outline: none;
+					//border: 1px solid white;
+					margin-right: 1rem;
+					color: white;
+					background-color: #8b8b8b;
+				border: 2px solid black;
+				border-left: 4px solid #373737;
+				border-top: 4px solid #373737;
+				border-bottom: 4px solid white;
+				border-right: 4px solid white;
+				}
+				button {
+					
+					font-family: mcFont;
+					box-shadow: 2px 2px 0 1px  inset, -2px -2px 0 1px  #555555 inset;
+					
+					padding: 0.5rem 1rem;
+					//background-color: white;
+					color: white;
+					background-color: #8b8b8b;
+					border: 4px solid black;
+					font-size: 1rem;
+					//border: none;
+					cursor: pointer;
+					transition: 0.3s;
+				}
+				button:active {
+					background-color: rgb(185, 185, 185);
+				}
+				.error{
+					margin-top: 1rem;
+					font-size: 1.2rem;
+					text-align: center;
+				}
+			}
+			.show-place {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				justify-content: center;
+				padding: 2rem;
+				// background-color: #8b8b8b;
+				// border: 2px solid black;
+				// border-left: 4px solid #373737;
+				// border-top: 4px solid #373737;
+				// border-bottom: 4px solid white;
+				// border-right: 4px solid white;
+				.card-text-all{
+					margin-top: 1rem;
+					text-align: center;
+					text-transform: uppercase;
+					font-size: 1.6rem;
+					
+				}
+				.card-description{
+					margin-top: 1rem;
+					font-size: 1.2rem;
+					text-align: center;
+					
+				}
+				.img {
+
+					width: 100px;
+					height: 100px;
+					background-color: #8b8b8b;
+				border: 2px solid black;
+				border-left: 4px solid #373737;
+				border-top: 4px solid #373737;
+				border-bottom: 4px solid white;
+				border-right: 4px solid white;
+				}
+				
+				
+			}
+		}
+	}
+	margin-bottom: 2rem;
 }
 
-.app-box__card--two{
-    .show-place{
-        margin-bottom: 70px;
-    }
+.app-box__card--one {
+	
+	.show-place {
+		margin-bottom: 70px;
+	}
 }
 
-.crafting{
-    width: 302px;
-    height: 302px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border: 1px solid rgb(145, 145, 145);;
-    .field{
-        width: 100px;
-        height: 100px;
-        background-color: rgb(100, 100, 100);
-        border: 2px solid rgb(145, 145, 145);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img{
-            width: 90px;
-            margin: 0;
-        }
-    
-    }
+.app-box__card--two {
+	.show-place {
+		margin-bottom: 70px;
+	}
+}
+
+.crafting {
+	width: 303px;
+	height: 302px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	border: 1px solid rgb(145, 145, 145);
+	.field {
+			background-color: #8b8b8b;
+				border: 2px solid black;
+				border-left: 4px solid #373737;
+				border-top: 4px solid #373737;
+				border-bottom: 4px solid white;
+				border-right: 4px solid white;
+		width: 100px;
+		height: 100px;
+		// background-color: rgb(100, 100, 100);
+		// border: 2px solid rgb(145, 145, 145);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img {
+			width: 90px;
+			margin: 0;
+		}
+	}
+}
+
+.item-list{
+	padding: 2rem;
+	border: 4px solid black;
+	max-width: 1400px;
+	width: 100%;
+	background-color: #c6c6c6;
+	box-shadow: 0 0 0 4px white inset;
+	.item-list-title{
+		margin-bottom: 1rem;
+		text-align: center;
+		font-size: 1.2rem;
+	}
+	.item-list-box{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		gap: 5rem;
+		flex-wrap: wrap;
+	}
+	.item-list-field{
+		p{
+			margin-top: 1rem;
+					text-align: center;
+					text-transform: uppercase;
+					font-size: 1.6rem;
+					width: 100px;
+					height: 100px;
+		}
+		img{
+			background-color: #8b8b8b;
+				border: 2px solid black;
+				border-left: 4px solid #373737;
+				border-top: 4px solid #373737;
+				border-bottom: 4px solid white;
+				border-right: 4px solid white;
+			width: 100px;
+			height: 100px;
+		}
+	}
 }
